@@ -47,14 +47,15 @@ class tx_egovapi_domain_repository_serviceRepository extends tx_egovapi_domain_r
 	 *
 	 * @param tx_egovapi_domain_model_topic $topic
 	 * @param boolean $withKey
+	 * @param boolean $cache
 	 * @return tx_egovapi_domain_model_service[]
 	 */
-	public function findAll(tx_egovapi_domain_model_topic $topic = NULL, $withKey = FALSE) {
+	public function findAll(tx_egovapi_domain_model_topic $topic = NULL, $withKey = FALSE, $cache = TRUE) {
 		if ($topic === NULL) {
 			throw new InvalidArgumentException('Topic cannot be null. This may be related to the use of an unsupported language for the web service.', 1299746874);
 		}
 		$id = $topic->getId();
-		if (isset(self::$servicesByTopic[$id])) {
+		if (isset(self::$servicesByTopic[$id]) && $cache) {
 			if (!$withKey) {
 				$servicesByTopic = array();
 				foreach (self::$servicesByTopic[$id] as $serviceKey => $service) {
